# minimal_cpp

./: CMakeLists.txt  LICENSE
app/: CMakeLists.txt
app/src/: main.cpp
